Solve minor visibility inconsistencies

--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -80,6 +80,7 @@ section {
 
 .home-content{
     max-width: 60rem;
+    font-size: X-large;
 }
 
 .home-content h1{
